prod_healthy_image_constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sHealthyImages
metadata:
  name: prod-healthyimage
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "production"
  parameters:
    repos:
      - "upstream.azurecr.io"
